--- a/css/responsive.custom.css
+++ b/css/responsive.custom.css
@@ -35,6 +35,7 @@
    * "Float Region blocks" is an extension for floating blocks in regions, see
    * your themes appearance settings, under the Extensions tab.
    */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/srv\/www\/mpgnorth\.deckdev\.com\/drupal\/sites\/all\/themes\/mpg_north\/sass\/responsive\.custom\.scss}line{font-family:\0000349}}
   .region[class*="float-blocks"] .block {
     float: none;
     width: 100%;
