--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -45,6 +45,7 @@ html {
 body {
   font-family: $sans-serif-small; // Set from _custom.scss font variables
   font-size: 87.5%;
+  color: #43423F;
 }
 
 
@@ -308,6 +309,8 @@ var {
 
   img {
     vertical-align: bottom;
+    width: 20%;
+    height: auto;
   }
 }
 
@@ -344,6 +347,7 @@ var {
  */
 #site-slogan {
   margin: 0;
+  color: #B5B5B5;
 }
 
 
@@ -539,6 +543,25 @@ a {
  * You can target all of these with .nav or div[id$="menu-bar"]
  */
 
+#primary-menu-bar {
+  background-color: #57534C;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#primary-menu-bar li {
+  border-right: 1px solid #D5CEC4;
+  margin: 5px 0;
+}
+
+#primary-menu-bar li.last {
+  border-right: none;
+}
+
+#primary-menu-bar li a {
+  color: #D5CEC4;
+}
+
 .nav {
   clear: both;
   margin: 10px 0;
@@ -563,6 +586,7 @@ a {
     display: block;
     white-space: nowrap;
     padding: 0 10px;
+    color: #D5CEC4;
     
     &:visited {}
     
@@ -1926,4 +1950,84 @@ tr.error {
     min-height: 260px;
     width: auto;
   }
+}
+
+
+/* =============================================================================
+ *   Misc overrides for site-specific styling
+ * ========================================================================== */
+
+/*
+ * Front Page
+ */
+
+.view-front-page-posts .views-row {
+  border-bottom: 1px dashed #43423F;
+}
+
+.view-front-page-posts .views-row-last {
+  border-bottom: none;
+}
+
+.view-front-page-posts .views-field-type {
+  float: left;
+  background-color: #E39809;
+  color: #FFFFFF;
+  padding: 0.2em 0.4em;
+  font-size: 1.2em;
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  -moz-box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+  -webkit-box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+  margin-right: 1em;
+}
+
+.view-front-page-posts .views-field-title h3 {
+  margin-bottom: 0;
+}
+
+
+#block-block-1 .block-title {
+  float: left;
+  width: 25%;
+  line-height: 2em;
+}
+
+#block-block-1 .block-content {
+  
+}
+
+
+.views-slideshow-cycle-main-frame, views-slideshow-cycle-main-frame * {
+  max-width: 100% !important;
+}
+
+.pane-front-page-gallery-panel-pane-1 .block-inner {
+  margin: 0;
+}
+
+#node-245 h1.node-title {
+  display: none;
+}
+
+
+/*
+ * Misc Node Styling
+ */
+
+.box-right {
+  float: right;
+  border: 1px solid #43423F;
+  padding: 1em;
+  margin: 0 0 1em 1em;
+  max-width: 50%;
+}
+
+.box-right h3 {
+  margin-top: 0;
 }
