--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -24,13 +24,17 @@
 //
 
 $page:         #fff;    // to match the page background, default is white
-$border:       #ccc;    // all borders set in global.styles - tables, fieldset, primary links
-$highlight:    #c00;    // required mark, form error highlight, "new" label on comments
+$border:       #D5CEC4;    // all borders set in global.styles - tables, fieldset, primary links
+$highlight:    #E09836;    // required mark, form error highlight, "new" label on comments
 $ultralight:   #f5f5f5; // table row even, primary link inactive tabs
 $light:        #eee;    // table row odd active, primary link inactive hover
 $medium_light: #ebebeb; // table row even active
 $medium_dark:  #e5e5e5; // table thead
 $debug:        rgba(255, 192, 203, 0.5); // Full width wrapper test
+
+$dark-gray:    #57554F;
+$light-gray:   #C6C5C3;
+$light-on-dark:#D5CEC4;
 
 $thead:          $medium_dark;
 $tr_odd:         $page;
