--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -1979,6 +1979,10 @@ tr.error {
       margin-right: 1em;
     }
     
+    .views-field-php {
+      float: right;
+    }
+    
     .views-field-title {
       h3 {
         margin-bottom: 0;
