--- a/css/lt-ie9.css
+++ b/css/lt-ie9.css
@@ -5,7 +5,7 @@
  * Assuming a mobile first approach with respond.js OFF, we must reset the font
  * size for lt IE9
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/srv\/www\/mpgnorth\.deckdev\.com\/drupal\/sites\/all\/themes\/mpg_north\/sass\/lt-ie9\.scss}line{font-family:\0000313}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/srv\/www\/mpgnorth\.deckdev\.com\/drupal-7\.17\/sites\/all\/themes\/mpg_north\/sass\/lt-ie9\.scss}line{font-family:\0000313}}
 html {
   font-size: 81.3%;
 }
