recompiled compass files and added silouette header image

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -375,6 +375,7 @@ iframe {
 #site-slogan {
   margin: 0;
   color: #B5B5B5;
+  background: url(../images/silouette.png) no-repeat right center;
 }
 
 
